data/derived/comb/progs/unify/prog8773.ml.out
Characters 68-69:
  | h::t -> if (getHeads x)::[] = [] 
                         ^
Error: This expression has type string but an expression was expected of type
         'a list
